# APRT

./: README.md  README_TF_APRT.md  aprt_llama3.sh  init_exp.sh  init_intention_expanding.sh  init_intention_hiding.sh  pyproject.toml  run_tf_aprt.sh
APRT/: auto_train.sh  load_init_model.json
APRT/primary_steps/: compute_helpfulness.sh  compute_safety_evaluate.sh  compute_safety_guard.sh  multi_attack.sh  multi_attack_chat_response.sh  pre_multi_attack.sh
APRT/scripts/: active_learning_selection_red.py  compute_aer.py  compute_asr_unsafety_helpful.py  infer_llama3.1-guard.py  infer_vicuna_vllm.py  infer_vllm.py  llama_flash_monkey_patch_v3.py  prepare_sft.py  product_attack_data.py  run_prepare_llama3.sh  train_sft.py  utils.py
aprt_cli/: cli.py
configs/: tf_aprt_config.json
env/data/attack/: attack.json  attack.json.0  attack.json.1  attack.json.2  attack.json.3  attack.json.4  attack.json.5  attack.json.6  attack.json.7  attack_format2.json
env/data/attack/create_data/: prompt
examples/: sample_queries.json
primary_steps/: compute_helpfulness_evaluate.sh  multi_attack.sh  multi_attack_chat_response.sh  multi_evaluate.sh  multi_evaluate_chat_response.sh  pre_multi_attack.sh  run_sft_llama3_red.sh
scripts/: compute_aer.py  compute_asr.py  conversations.py  infer_safety_llama3.py  infer_safety_pre-attack_llama3.py  infer_vllm.py  parse_pre-attack_data_v2.py  prepare_sft.py  product_attack_data.py  run_prepare_llama2.sh  sft_data.py  sort_incremental_red_by_asr.py  step2_build_arrow-for-safe.py  tf_aprt_integration.py  train_sft.py  training_free_aprt.py
(+51 files in other folders)
