[project]
name = "aprt"
version = "0.1.0"
description = "Automated Progressive Red Teaming (APRT) CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "APRT Maintainers" }
]
license = { text = "MIT" }
dependencies = [
  "typer==0.12.3",
  "requests>=2.31.0",
  "google-generativeai>=0.7.2",
  "loguru>=0.7.2",
  "transformers==4.43.1",
  "vllm>=0.4.2",
]

[project.scripts]
aprt = "aprt_cli.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"